[tool.poetry]
name = "deposit-calculate"
version = "0.1.0"
description = ""
authors = ["AlexeyKurlevsky <kurlevsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
load-dotenv = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "N",  # pep8-naming
    "FIX",
    "FBT",
    "ARG",
    "PTH",
    "ERA",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
